Fix horizontal scroll on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -1,11 +1,8 @@
 @import url('custom_properties.css');
 
-:root {
-  overflow-x: hidden;
-}
-
 html {
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 body {
@@ -13,7 +10,9 @@ body {
   color: var(--em-text);
   font-family: var(--content-ff);
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
+  position: relative;
 }
 
 main {
